  get mysterious (mass) disconnect issues.
- Lol, I made /connect dissapear during modulizing ;).
- Added a warning if your listen portrange affects >100 ports
  (eg for idiots doing 6667-7000 which uses 333 sockets).
- Added some extra debugging for tkl update notice...
- Fixed a problem in 'tkl update': lowest expire time won instead of
  highest. Reported by Malcolm.
- Fixed a tkl update problem with sqlines
- Improved dcc blocking support (both for spamfilter and deny dcc).
- '0' tkltime in spamfilter now really means 'perm', not '*line for
  0 seconds' or something. Reported by Certus.
- Fixed a bug in individual m_*.so loading, 39 new modules were affected.
- Fixed an issue where chanmode +f was often set by the server again
  in a netjoin when there was no need to (nothing to synch).
- Added spamfilter::except which allows you to specify targets
  (eg: channels) where spamfilter should not take action. Requested by Fury
  (#0001586). Ex: set { spamfilter { except "#spamreport,#help"; }; };
- Fixed a zero-terminate bug in remote includes: urls with '?' in it could
  cause a crash, reported by Joolz (#0001587).
- Made numerics 518-520 a bit more clear by mentioning the channelname in it.
  Suggested by Zell (#0001589).
- Fixed a bug reported by Joolz that would cause problems when deleting a remote
  included file from a server (#0001587).
- Fixed a few more remote include problems on Windows
- Fixed a remote include problem caused by an earlier fix that resulted in referencing
  free'd memory 
- Q comes after P. Thanks to Rocko for reminding us! (fixes /stats P bug ;p).
- Added 90% of RC2 release notes.
- Cosmetic doc updates (#0001596) reported by HERZ.
- Updated SSL error for underlying syscall error a bit (#0001615).
- Minor doc updates on SSL (mIRC now supports SSL a bit).
- Fixed yet another fun remote includes memory corruption crash bug due
  to curl strangeness (took me 2 hours to trace down, great!). Reported by Matridom.